--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,7 +51,7 @@ body:has(.card[data-color='green']:hover) {
   }
 
   .header {
-    @apply flex justify-between items-center sm:px-16 px-8 py-4 max-w-5xl mx-auto absolute top-0 bg-transparent z-10 right-0 left-0;
+    @apply flex justify-between items-center px-8 py-8 w-full mx-0 absolute top-0 bg-transparent z-10 right-0 left-0;
   }
 
   .footer {
