--- a/src/styles/dialogue.css
+++ b/src/styles/dialogue.css
@@ -16,7 +16,38 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.dialogue-box .text {
+.dialogue-box .text,
+.instructions-box .text {
   font-size: 20px;
   line-height: 1.5;
+}
+
+.dialogue-box {
+  position: absolute;
+  top: 40%;
+  left: 40%;
+  max-width: 300px;
+  width: auto; /* Adjust width as needed */
+  background-color: rgba(255, 255, 255, 0.8); /* White background */
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.instructions-box {
+  text-align: center;
+  position: absolute;
+  top: 45%;
+  left: 40%;
+  right: 40%;
+  max-width: 300px;
+  width: auto; /* Adjust width as needed */
+  background-color: rgba(255, 255, 255, 0.8); /* White background */
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.grabby-cursor {
+  cursor: grab;
 }
