--- a/src/styles/toggle.css
+++ b/src/styles/toggle.css
@@ -2,7 +2,7 @@
   position: absolute;
   bottom: 32px;
   right: 32px;
-  background-color: navy;
+  background-color: rgb(10, 10, 90);
   color: white;
   border: none;
   padding: 10px 20px;
@@ -15,7 +15,7 @@
 
 .toggle-button:hover {
   filter: drop-shadow(0px 0px 4px white);
-  color: navy;
+  color: rgb(10, 10, 90);
   background-color: white;
   font-weight: bold;
 }
