--- a/src/styles/loader.css
+++ b/src/styles/loader.css
@@ -1,22 +1,8 @@
-.loader-container {
+.load-background {
+  height: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
-.loader {
-  border: 4px solid rgba(255, 255, 255, 0.1);
-  border-left-color: #041053;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: rgb(2, 3, 20);
 }
