--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,6 +12,7 @@
 body {
   background-color: rgb(0, 4, 11);
   font-family: 'Work Sans', sans-serif;
+  height: -webkit-fill-available;
 }
 
 body:has(.card[data-color='blue']:hover) {
