--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -7,3 +7,9 @@
 html {
   height: -webkit-fill-available;
 }
+
+.canvas-container {
+  width: 100%;
+  height: 100vh;
+  background-color: transparent;
+}
