--- a/src/styles/toggle.css
+++ b/src/styles/toggle.css
@@ -1,9 +1,8 @@
-.toggle-button {
-  position: absolute;
-  bottom: 32px;
-  right: 32px;
-  background-color: rgb(10, 10, 90);
-  color: white;
+.toggle-button,
+.start-button {
+  background-color: rgb(255, 255, 255);
+  color: rgb(10, 10, 90);
+  font-weight: bold;
   border: none;
   padding: 10px 20px;
   font-size: 16px;
@@ -13,9 +12,23 @@
   transition: all 0.2s ease;
 }
 
-.toggle-button:hover {
+.start-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.toggle-button {
+  position: absolute;
+  bottom: 32px;
+  right: 32px;
+}
+
+.toggle-button:hover,
+.start-button:hover {
   filter: drop-shadow(0px 0px 4px white);
-  color: rgb(10, 10, 90);
-  background-color: white;
+  color: white;
+  background-color: rgb(10, 10, 90);
   font-weight: bold;
 }
