--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-color: rgb(0, 4, 11);
+  /* background-color: rgb(0, 4, 11); */
   font-family: 'Work Sans', sans-serif;
   height: 100dvh;
 }
@@ -24,6 +24,10 @@ body:has(.card[data-color='green']:hover) {
 }
 
 @layer utilities {
+  .bg-custom-background {
+    background-color: rgb(0, 4, 11);
+  }
+
   .max-container {
     @apply max-w-5xl mx-auto sm:p-16 pb-12 !pt-[126px] px-8 min-h-[calc(100vh-80px)];
   }
