--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -117,7 +117,8 @@ body:has(.card[data-color='green']:hover) {
   transform-origin: bottom right;
   transform: rotateZ(15deg);
   will-change: transform;
-  box-shadow: 16px 0 40px #e4e4e4;
+  box-shadow: 16px 0 30px #2b2b2e;
+  background-color: #ffffff33;
 }
 
 .block-container .btn-back-red {
