--- a/src/styles/loader.css
+++ b/src/styles/loader.css
@@ -1,8 +1,15 @@
-.load-background {
+/* .load-background {
   height: 100%;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: rgb(0, 0, 0);
 }
+
+.loading-percentage {
+  margin-top: 20px;
+  font-size: 24px;
+  color: white;
+} */
